AP    5- alginit(nf, hasse inv.) sometimes wrong degree or stack overflow
      6- factor(x/y) -> error
      7- factor(y/x) -> x^-1 [ instead of y^1 * x^-1 ]
      8- factor(x^2 + O(2^2)) -> x^2 [ instead of (x+O(2^2))^1 * (x+O(2^2))^1 ]
      9- mfeigenbasis(mfinit(71,1,71)) -> error [ full space in wt 1 ]
     10- make galoissubcyclo compatible with znstar(,1)

  Changed
      1- polcoeff is deprecated and renamed polcoef: it now only applies
         to scalars, polynomials, series and rational functions; no longer to
         vector/matrices or quadratic forms (use [] or "component").
      2- [libpari] rename polcoeff0 -> polcoef, polcoeff_i -> polcoef_i,
         truecoeff -> truecoef
      3- t_LIST corrupted on writebin / read [#2040]
      4- add optional argument to denominator/content/numerator to allow
         better control over semantic. E.g.
         No arg:  denominator([1/2, 1/x, 1/y]) -> 2*y*x
                  denominator([1/2, 1/x, x/y]) -> 2*x
                  denominator([x/2, 1/x, 1/y]) -> y*x
         With arg: denominator(,1) is 2 in all 3 cases
                   denominator(,x) is x in all 3 cases
                   denominator(,y) is y in all 3 cases
      5- factor(t_RFRAC): sort factors by increasing degree
      6- [libpari] rename constant LOG2 -> M_LN2 (from math.h if available)
      7- ellweilcurve: allow input in ellisomat form

  Added
      1- [libpari] denom_i, numer_i, conj_i
BA    2- [libpari] Fp_pow_init, Flxq_pow_init, F2xq_pow_init
                   Fp_pow_table, Flxq_pow_table, F2xq_pow_table
                   gen_pow_init, gen_pow_table
      3- new GP function serchop
      4- [libpari] serchop_i
BA    5- [libpari] hash_init_GEN, hash_haskey_long, hash_insert_long
BA    6- [libpari] FpX_ddf_degree, FpXQX_ddf_degree, FlxqX_ddf_degree
      7- [libpari] checkell_i
      8- new GP function ellisotree
      9- mspolygon: add graphical representations (LaTeX form)

Done for version 2.10.0 (released 15/05/2018):
  Fixed