@@ -182,6 +182,9 @@
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
 [[1, 0, 0; 0, 1, 0; 0, 0, 1], Mat([2, 1])]
 
+[[2, [2, 0, 0, 0]~, 1, 4, 1] 4]
+
+
 [[67452192952521724999, [-16711321285323715217, 1]~, 1, 1, [1671132128532371
 5218, -1; 1, 16711321285323715217]] 1]
 
@@ -266,4 +269,4 @@
   ***   at top-level: idealred(nf,[2,Mat(1)])
   ***                 ^-----------------------
   *** idealred: incorrect type in idealtyp [extended ideal] (t_VEC).
-Total time spent: 120
+Total time spent: 177
